# pycore-i-final-i-seai-1-g-9

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  codebook.toml  pyproject.toml
docs/: cli_help.md  conventions.md
docs/final_project/: acceptance_criteria.md  delivery.md  extra_links.md  task.md  team.md
src/goit_i_pycore_i_personal_assistant/: __main__.py  main.py
src/goit_i_pycore_i_personal_assistant/cli/: main.py
src/goit_i_pycore_i_personal_assistant/cli/chat/: main.py
src/goit_i_pycore_i_personal_assistant/cli/helpers/: main.py
src/goit_i_pycore_i_personal_assistant/constants/: app_info.py
src/goit_i_pycore_i_personal_assistant/services/chat/: main.py
src/goit_i_pycore_i_personal_assistant/services/commands/: command_meta.py  commands_meta_registry.py
src/goit_i_pycore_i_personal_assistant/services/console/: completer.py
src/goit_i_pycore_i_personal_assistant/services/data_storage/: data_storage.py
src/goit_i_pycore_i_personal_assistant/services/get_paths/: get_app_dirs.py  get_app_paths.py
src/goit_i_pycore_i_personal_assistant/services/handlers/: exit.py  help.py
src/goit_i_pycore_i_personal_assistant/services/handlers_base/: handler_base.py  handler_output.py
src/goit_i_pycore_i_personal_assistant/services/parse_input/: parse_input.py
src/goit_i_pycore_i_personal_assistant/tests/: test_command_registry.py
src/goit_i_pycore_i_personal_assistant/typing/: alias.py
src/goit_i_pycore_i_personal_assistant/utils/: format.py
src/persyval/: __main__.py  main.py
src/persyval/cli/: constants.py  main.py
src/persyval/cli/chat/: main.py
src/persyval/cli/helpers/: main.py
src/persyval/constants/: app_info.py  numeric_contants.py  text.py
src/persyval/exceptions/: main.py
src/persyval/models/: contact.py  note.py  phone.py
src/persyval/services/birthday/: get_nearest_anniversary.py  parse_and_format.py  validate_birthday.py
src/persyval/services/chat/: get_input.py  main.py  parse_input_and_make_action.py
src/persyval/services/commands/: args_config.py  command_meta.py  commands_enum.py  commands_meta_registry.py  iterate_over_commands_meta.py
src/persyval/services/console/: add_option_i_to_main_menu.py  completer.py  render_item_card_with_panel.py  types.py  yes_no_dialog.py
src/persyval/services/data_actions/: contact_add.py  contact_delete.py  contact_get.py  contact_list.py  contact_remove.py  contact_update.py  contacts_download.py  contacts_get_upcoming_birthdays.py  contacts_list.py  note_add.py  note_delete.py  note_get.py  note_list.py  note_update.py  notes_list.py
src/persyval/services/data_storage/: data_storage.py
src/persyval/services/data_storage_filler/: data_storage_filler.py
src/persyval/services/email/: validate_email.py
src/persyval/services/execution_queue/: execution_queue.py
src/persyval/services/export/: export_items.py
src/persyval/services/get_paths/: get_app_dirs.py
src/persyval/services/handlers/: contact_add.py  contact_delete.py  contact_edit.py  contact_list.py  contact_view.py  contacts_download.py  contacts_export.py  contacts_get_upcoming_birthdays.py  contacts_list.py  contacts_root.py  exit.py  hello.py  help.py  note_add.py  note_delete.py  note_edit.py  note_list.py  note_view.py  notes.py  notes_export.py  notes_list.py  notes_old.py  notes_root.py  root.py  storage_clear.py  storage_root.py  storage_show_birthdays.py  storage_stats.py
src/persyval/services/handlers/contacts/: contact_item_ask_next_action.py  contacts_ask_next_action.py
src/persyval/services/handlers/notes/: add_and_edit.py  note_item_ask_next_action.py
src/persyval/services/handlers/shared/: args_i_empty.py  args_i_force.py  list_show.py  sort_and_filter.py
src/persyval/services/handlers_base/: handler_base.py  handler_output.py
src/persyval/services/handlers_base/helpers/: no_direct_args_check.py
src/persyval/services/intro/: render_intro.py
src/persyval/services/model_meta/: field_meta.py  model_meta_info.py
src/persyval/services/parse_input/: parse_input.py
src/persyval/services/phone/: validate_phone_list.py
src/persyval/tests/: demo_interaction.sh  test_birthday.py  test_command_registry.py  test_contacts_model.py  test_contacts_with_storage.py  test_data_storage.py  test_email.py  test_phone.py
src/persyval/utils/: convert_command_part_to_bool.py  convert_snake_case_to_human_readable.py  format.py
