[project]
name = "persyval"
version = "0.1.0"
description = "Personal Assistant application"
readme = "README.md"
authors = [
    { name = "Aleksandr Sizov", email = "alirex.prime@gmail.com" },
    { name = "Liudmyla Deinychenko", email = "deliugri@gmail.com" },
    { name = "Natasha Belodedenko", email = "cocokringle.1@gmail.com" },
    { name = "Rita Bohoslavska", email = "bohoslavskar@gmail.com" },
    { name = "Ruslan Stupak", email = "stupakruslan07@gmail.com" },
]
requires-python = ">=3.14.0"
dependencies = [
    # Better classes and validation.
    "pydantic[email]>=2.12.4",
    # Pretty terminal output.
    "rich>=14.2.0",
    # Environment variable parsing and validation.
    "environs>=14.5.0",
    # Better command-line interfaces.
    "prompt-toolkit>=3.0.52",
    # Command-line interface creation library.
    "typer>=0.20.0",
    # User folders path handling.
    "platformdirs>=4.5.0",
]

[dependency-groups]
dev = [
    # Static type checker
    "mypy>=1.18.2",
    # Tests.
    "pytest>=9.0.0",
    # Freeze time for tests.
    "freezegun>=1.5.5",
    "pexpect>=4.9.0",
]

[project.scripts]
persyval = "persyval:main"
persy = "persyval:main_short"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

extend-exclude = [
]

[tool.ruff.lint]
extend-select = [
    "ALL",
]
extend-ignore = [
    # Missing docstring.
    "D1",
    # flake8-future-annotations.
    "FA",
    # Missing type annotation for self and cls.
    "ANN1",
    # f-strings to format logging messages.
    "G004",
    # Consider {expression} instead of string join.
    "FLY002",
    # TODO: Remove after this will be implemented in MyPy.
    # Type alias {name} uses TypeAlias annotation instead of the type keyword
    "UP040",
    # TODOs
    # Author.
    "TD002",
    # Link to issue
    "TD003",
    # Line contains a TODO or related comment
    "FIX",
    # Args and kwargs are not used and not annotated
    "ANN002",
    "ANN003",
    # Commented code
    "ERA001",
    # empty-comment
    "PLR2044",
    #
    #
    # print used.
    "T201",
]

task-tags = [
    "TODO",
    "FIXME",
    "HACK",
    "XXX",
    "[",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
# https://betterprogramming.pub/3-different-docstring-formats-for-python-d27be81e0d68

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    # Unused import.
    "F401",
]

"test_*.py" = [
    # Allow `assert` statements in tests.
    "S101",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]
runtime-evaluated-decorators = [
    "pydantic.validate_call",
    "app.command",
]
