[project]
name = "persyval"
version = "0.3.0"
description = "Personal Assistant application"
readme = "README.md"
authors = [
    { name = "Aleksandr Sizov", email = "alirex.prime@gmail.com" },
    { name = "Liudmyla Deinychenko", email = "deliugri@gmail.com" },
    { name = "Natasha Belodedenko", email = "cocokringle.1@gmail.com" },
    { name = "Rita Bohoslavska", email = "bohoslavskar@gmail.com" },
    { name = "Ruslan Stupak", email = "stupakruslan07@gmail.com" },
]
requires-python = ">=3.14.0"
dependencies = [
    # Better classes and validation.
    "pydantic[email]>=2.12.4",
    #
    # Environment variable parsing and validation.
    "environs>=14.5.0",
    # CLI creation library.
    "typer>=0.20.0",
    #
    # User folders path handling.
    "platformdirs>=4.5.0",
    # [validators]-[BEGIN]
    "phonenumbers>=9.0.18",
    "email-validator>=2.3.0",
    # [validators]-[END]
    #
    # [tui_libs]-[BEGIN]
    # Libs for TUI application.
    # Pretty terminal output.
    "rich>=14.2.0",
    # Better command-line interfaces.
    "prompt-toolkit>=3.0.52",
    # [tui_libs]-[END]
    #
    # Date and time utilities.
    "python-dateutil>=2.9.0.post0",
    # Fake data generator.
    "faker>=38.0.0",
]

[dependency-groups]
dev = [
    # [typing]-[BEGIN]
    # Static type checker
    "mypy>=1.18.2",
    #
    # Types for libs.
    "types-python-dateutil>=2.9.0.20251108",
    # [typing]-[END]
    #
    # [testing]-[BEGIN]
    # Tests.
    "pytest>=9.0.1",
    # Freeze time for tests.
    "freezegun>=1.5.5",
    # Interactive command-line testing.
    "pexpect>=4.9.0",
    # [testing]-[END]
    # Extra checker. Used by Zed.
    "basedpyright>=1.33.0",
    # Task runner
    "poethepoet>=0.37.0",
    # Dead code checker
    "vulture>=2.14",
    # Code complexity checker
    "radon>=6.0.1",
]

[project.scripts]
persyval = "persyval:main"
persy = "persyval:main_short"

[tool.poe.tasks]
pca= [
    {cmd = "prek run --all-files"},
]

# Run with: poe metrics or uv run poe metrics
# Check code quality: dead code, complexity, and maintainability
metrics = [
    {cmd = "vulture . --min-confidence 80 --exclude .venv,build,dist,docs,scripts,tests"},
    {cmd = "radon cc . -a -nb"},
    {cmd = "radon mi . -nb"}
]

# Run with: poe quality or uv run poe quality
# Full quality check: format, lint, type check, and metrics
quality = [
    {cmd = "ruff format ."},
    {cmd = "ruff check . --fix"},
    {cmd = "basedpyright --level error"},
    {cmd = "vulture . --min-confidence 80 --exclude .venv,build,dist,docs,scripts,tests"},
    {cmd = "radon cc . -a -nb"}
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

strict = true
# follow_imports = "silent"
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# no_implicit_reexport = true
# disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
fix = true
show-fixes = true

extend-exclude = [
]

# [tool.ruff.lint.isort]
# # known-first-party = ["your_package_name"]  # CHANGE THIS
# combine-as-imports = true
# force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "ALL",
]
extend-ignore = [
    # Missing docstring.
    "D1",
    # flake8-future-annotations.
    "FA",
    # Missing type annotation for self and cls.
    "ANN1",
    # f-strings to format logging messages.
    "G004",
    # Consider {expression} instead of string join.
    "FLY002",
    # TODOs
    # Author.
    "TD002",
    # Link to issue
    "TD003",
    # Line contains a TODO or related comment
    "FIX",
    # Args and kwargs are not used and not annotated
    "ANN002",
    "ANN003",
    # Commented code
    "ERA001",
    # empty-comment
    "PLR2044",
    #
    #
    # print used.
    "T201",
]

task-tags = [
    "TODO",
    "FIXME",
    "HACK",
    "XXX",
    "[",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
# https://betterprogramming.pub/3-different-docstring-formats-for-python-d27be81e0d68

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    # Unused import.
    "F401",
]

"test_*.py" = [
    # Allow `assert` statements in tests.
    "S101",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "persyval.services.execution_queue.execution_queue.HandlerArgsBase"
]
runtime-evaluated-decorators = [
    "pydantic.validate_call",
    "app.command",
]

[tool.basedpyright]
typeCheckingMode = "strict"

# # ============================================================
# # IMPORT AND MODULE CHECKS
# # ============================================================
# reportMissingImports = true
# reportMissingTypeStubs = true  # Stricter: require type stubs
# reportUndefinedVariable = true
# reportAssertAlwaysTrue = true
# reportInvalidStringEscapeSequence = true

# # ============================================================
# # STRICT NULL SAFETY (like TS strictNullChecks)
# # ============================================================
# reportOptionalSubscript = true
# reportOptionalMemberAccess = true
# reportOptionalCall = true
# reportOptionalIterable = true
# reportOptionalContextManager = true
# reportOptionalOperand = true
# reportAny = true  # Prohibir Any completamente
# reportExplicitAny = true
# reportIgnoreCommentWithoutRule = false  # No permitir # type: ignore sin código
# reportPrivateLocalImportUsage = true
# # Unrecognized configuration
# # reportUnnecessaryTypeAnnotation = true  # Detectar anotaciones redundantes

# # ============================================================
# # TYPE COMPLETENESS (like TS noImplicitAny + strictFunctionTypes)
# # ============================================================
# reportMissingParameterType = true
# reportMissingTypeArgument = true
# reportUnknownParameterType = true
# reportUnknownLambdaType = true
# reportUnknownArgumentType = true   # STRICT: Enable (can be noisy)
# reportUnknownVariableType = true   # STRICT: Enable (can be noisy)
# reportUnknownMemberType = true     # STRICT: Enable (can be noisy)
# reportUntypedFunctionDecorator = true
# reportUntypedClassDecorator = true
# reportUntypedBaseClass = true
# reportUntypedNamedTuple = true

# # ============================================================
# # CLASS AND INHERITANCE CHECKS
# # ============================================================
# reportIncompatibleMethodOverride = true
# reportIncompatibleVariableOverride = true
# reportInconsistentConstructor = true
# reportUninitializedInstanceVariable = true
# reportOverlappingOverload = true
# reportMissingSuperCall = true  # STRICT: Enable

# # ============================================================
# # CODE QUALITY (like TS noUnusedLocals + noUnusedParameters)
# # ============================================================
# reportPrivateUsage = true
# reportConstantRedefinition = true
# reportInvalidStubStatement = true
# reportIncompleteStub = true
# reportUnsupportedDunderAll = true
# reportUnusedClass = "error"        # STRICT: Error instead of warning
# reportUnusedFunction = "error"     # STRICT: Error instead of warning
# reportUnusedVariable = "error"     # STRICT: Error instead of warning
# reportUnusedImport = "error"       # STRICT: Error instead of warning
# reportDuplicateImport = "error"    # STRICT: Error instead of warning

# # ============================================================
# # UNNECESSARY CODE DETECTION
# # ============================================================
# reportUnnecessaryIsInstance = "error"         # STRICT: Error
# reportUnnecessaryCast = "error"               # STRICT: Error
# reportUnnecessaryComparison = "error"         # STRICT: Error
# reportUnnecessaryContains = "error"           # STRICT: Error
# reportUnnecessaryTypeIgnoreComment = "error"  # STRICT: Error

# # ============================================================
# # FUNCTION/METHOD SIGNATURE STRICTNESS
# # ============================================================
# reportGeneralTypeIssues = true
# reportPropertyTypeMismatch = true
# reportFunctionMemberAccess = true
# reportCallInDefaultInitializer = true
# # Note: This is too strict, but can be enabled if desired
# # reportImplicitStringConcatenation = true  # STRICT: Enable

# # ============================================================
# # ADDITIONAL STRICT CHECKS (Progressive Enhancement)
# # ============================================================
# reportImplicitOverride = true    # STRICT: Require @override decorator (Python 3.12+)
# # Unrecognized configuration
# # reportShadowedImports = true     # STRICT: Detect shadowed imports
# reportDeprecated = "warning"     # Warn on deprecated usage

# # ============================================================
# # ADDITIONAL TYPE CHECKS
# # ============================================================
# reportImportCycles = "warning"

# # ============================================================
# # EXCLUSIONS
# # ============================================================
# exclude = [
#     "**/__pycache__",
#     "**/node_modules",
#     ".git",
#     ".mypy_cache",
#     ".pyright_cache",
#     ".ruff_cache",
#     ".pytest_cache",
#     ".venv",
#     "venv",
#     "env",
#     "logs",
#     "output",
#     "data",
#     "build",
#     "dist",
#     "*.egg-info",
# ]

# venvPath = "."
# venv = ".venv"

# Useful:
# https://github.com/Ranteck/PyStrict-strict-python/blob/develop/pyproject.toml
